added vim to list of thigns to install uuv_docker

--- a/uuv_docker/Dockerfile
+++ b/uuv_docker/Dockerfile
@@ -36,6 +36,7 @@ RUN apt install -y --no-install-recommends\
         software-properties-common \
         sudo \
         wget \
+	vim \
  && apt clean
 
 # Fixing TimeZone problem reported in VRX 2019
