Added working ogre1.9 dockerfile. See docker file for clone command

--- a/ogre_1_9_docker/Dockerfile
+++ b/ogre_1_9_docker/Dockerfile
@@ -6,7 +6,10 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update
 RUN apt-get install -y vim git g++ gcc build-essential 
+RUN apt-get install -y libfreetype6-dev libboost-date-time-dev libboost-thread-dev nvidia-cg-toolkit \
+    libfreeimage-dev zlib1g-dev libzzip-dev libois-dev libcppunit-dev doxygen libxt-dev libxaw7-dev \ 
+    libxxf86vm-dev libxrandr-dev libglu-dev cmake
 
-RUN git clone -b v1.9.1 --single-branch https://github.com/ogrecave/ogre /home/carson/libs/ogre1.9
+# RUN git clone -b v1.9.1 --single-branch https://github.com/ogrecave/ogre /home/carson/libs/ogre1.9
 
 CMD ["/bin/bash"]
