--- a/dockwater_test/Makefile
+++ b/dockwater_test/Makefile
@@ -10,6 +10,8 @@ run-uuv:
 	--runtime=nvidia \
 	--gpus=all \
         -v /tmp/.X11-unix:/tmp/.X11-unix \
+	-v /home/carson/uuv_ws:/home/carson/uuv_ws \
+	-v /home/carson/moveit_ws:/home/carson/moveit_ws \
 	-v /home/carson:/home/carson \
 	--device=/dev/input/js0 \
 	uuv_docker
