--- a/vnc_docker/Makefile
+++ b/vnc_docker/Makefile
@@ -4,6 +4,5 @@ build-vnc:
 	docker build -t vnc_docker .
 
 run-vnc:
-	docker run -ti --rm \
-	uuv_docker
+	docker run -d --name vnc -p 5900:5900 vnc_docker
 
