--- a/melodic_docker/Dockerfile
+++ b/melodic_docker/Dockerfile
@@ -1,13 +1,13 @@
-FROM osrf/ros:galactic-desktop
+FROM ros:melodic-ros-base-bionic
 
 # Set Ubuntu release
-#ARG RELEASE=focal
+ARG RELEASE=bionic
 
 # Set ROS distribution
-ARG DIST=galactic
+ARG DIST=melodic
 
 # Set Gazebo version
-#ARG GAZ=gazebo11
+ARG GAZ=gazebo9
 
 # Required utilities
 RUN apt update \
@@ -23,10 +23,6 @@ RUN apt update \
         lsb-release \
         pkg-config \
         protobuf-compiler \
-        python3-dbg \
-        python3-pip \
-        python3-scipy \
-        python3-venv \
         qtbase5-dev \
         ruby \
         software-properties-common \
@@ -43,9 +39,21 @@ RUN export DEBIAN_FRONTEND=noninteractive \
  && dpkg-reconfigure --frontend noninteractive tzdata \
  && apt clean
 
-RUN apt install -y --no-install-recommends \
-  ros-${DIST}-turtlebot4-desktop \
-  ros-${DIST}-irobot-create-msgs
+# Get ROS and Gazebo
+RUN apt update \ 
+ && apt install -y --no-install-recommends \
+    ${GAZ} \
+    lib${GAZ}-dev \
+    ros-${DIST}-gazebo-plugins \
+    ros-${DIST}-gazebo-ros \
+    ros-${DIST}-gazebo-ros-control \
+    ros-${DIST}-gazebo-ros-pkgs \
+    ros-${DIST}-effort-controllers \
+ && apt clean
+
+COPY .vimrc /root/
+
+RUN apt update && apt upgrade -y
 
 # Optional: Dev. tools, applications, etc.
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -53,6 +61,4 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     psmisc \
     vim \
     && rm -rf /var/lib/apt/lists/*
-
-RUN apt update && apt upgrade -y
 
