--- a/humble_docker/Makefile
+++ b/humble_docker/Makefile
@@ -11,5 +11,6 @@ run-humble:
 	--gpus=all \
         -v /tmp/.X11-unix:/tmp/.X11-unix \
 	-v /home/carson:/home/carson \
+	--device=/dev/input/js0 \
 	humble_docker
 
