update melodic docker for pioneer

--- a/galactic_docker/Makefile
+++ b/galactic_docker/Makefile
@@ -1,16 +1,16 @@
-.PHONY: build-humble run-humble
+.PHONY: build-galactic run-galactic
 
-build-humble:
-	docker build -t humble_docker .
+build-galactic:
+	docker build -t galactic_docker .
 
-run-humble:
+run-galactic:
 	xhost +"local:docker@" && \
-        nvidia-docker run -ti --rm \
+        docker run -ti --rm \
         -e DISPLAY=${DISPLAY} \
 	--runtime=nvidia \
 	--gpus=all \
         -v /tmp/.X11-unix:/tmp/.X11-unix \
 	-v /home/carson:/home/carson \
 	--device=/dev/input/js0 \
-	humble_docker
+	galactic_docker
 
