--- a/melodic_docker/Makefile
+++ b/melodic_docker/Makefile
@@ -11,5 +11,7 @@ run-melodic:
 	--gpus=all \
         -v /tmp/.X11-unix:/tmp/.X11-unix \
 	-v /home/carson:/home/carson \
+	--device /dev/ttyUSB0 \
+	--device /dev/input/js0 \
 	melodic_docker
 
