--- a/uuv_docker/Makefile
+++ b/uuv_docker/Makefile
@@ -8,6 +8,7 @@ run-uuv:
         docker run -ti --rm \
         -e DISPLAY=${DISPLAY} \
 	--runtime=nvidia \
+	--device=/dev/video2 \
 	--gpus=all \
         -v /tmp/.X11-unix:/tmp/.X11-unix \
 	-v /home/carson:/home/carson \
