Added makefile with some handy clean up commands

--- a/uuv_docker/Dockerfile
+++ b/uuv_docker/Dockerfile
@@ -135,3 +135,5 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     vim \
     && rm -rf /var/lib/apt/lists/*
 
+# Install Ollama
+curl -fsSL https://ollama.com/install.sh | sh
